delete some bugs on small devices

--- a/main.scss
+++ b/main.scss
@@ -20,7 +20,7 @@ body {
 
 .container {
     width: 100%;
-    min-height: 50vh;
+    height: 400px;
     margin: 0 auto;
     @include d-flex();
     justify-content: space-evenly;
@@ -36,7 +36,7 @@ body {
     }
     .user-text {
         width: 200px;
-        height: 5vh;
+        height: 50px;
         font-size: 1.3rem;
         text-align: center;
         border-radius: 5px;
